syntax = "proto2";

option java_outer_classname = "CxnRsCP";

message request{
    required int32 proto_type = 1;
    required int64 proto_id = 2;
    required int64 utc_time = 3;

    required bool response = 4;
}